# watchclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default-config.yaml  default-rules.yaml
dashboard/: index.html
docs/: architecture.md  design.md  rules.md  signals.md
src/watchclaw/: __init__.py  __main__.py  alerter.py  auditor.py  cli.py  engine.py  features.py  models.py  parser.py  rules.py  scorer.py  sequence.py  server.py  simulator.py  taint.py  watcher.py
tests/: bench_performance.py  test_alerter.py  test_auditor.py  test_boundary.py  test_cli.py  test_features.py  test_integration.py  test_logging.py  test_models.py  test_profile.py  test_rules.py  test_scorer.py  test_security.py  test_sequence.py  test_signals.py  test_taint.py
